--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nizsheanez/yii2-asset-converter",
+    "name": "csegedicsaba/yii2-asset-converter",
     "description": "Less, Sass, Scss and Phamlp converter for Yii2. No system requires. yii2-composer support, Less autoupdate, customizing of output directory",
     "type": "yii2-extension",
     "keywords": ["yii", "yii2", "asset", "converter", "less", "sass", "scss", "compass", "phamlp"],
@@ -16,7 +16,7 @@
         "yiisoft/yii2": "2.*",
         "yiisoft/yii2-composer": "2.*",
         "oyejorge/less.php": "1.7.0.*",
-        "richthegeek/phpsass": "1.*",
+        "csegedicsaba/phpsass": "1.*",
         "leafo/scssphp": "0.*",
         "yourilima/scssphp-compass": "1.*"
     },
